// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Icon component sanity matches default snapshot 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <div
    class="c1"
    display="inline-flex"
  >
    <svg
      class="c2"
      color="inherit"
      fill="currentcolor"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</button>
`;

exports[`Button Icon component sanity matches themed snapshot 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <div
    class="c1"
    display="inline-flex"
  >
    <svg
      class="c2"
      color="inherit"
      fill="currentcolor"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</button>
`;

exports[`Button Icon only component sanity matches default snapshot 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <div
    class="c1"
    display="inline-flex"
  >
    <svg
      class="c2"
      color="inherit"
      fill="currentcolor"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </div>
</button>
`;

exports[`Button Icon with position prop component sanity matches default snapshot 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <div
    class="c1"
    display="inline-flex"
  >
    <svg
      class="c2"
      color="inherit"
      fill="currentcolor"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</button>
`;

exports[`Button component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button disabled component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  disabled=""
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button disabled component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  disabled=""
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button size variant component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  width: small;
  height: small;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 14px;
  padding-left: 16px;
  padding-right: 16px;
  height: 40px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button size variant component sanity matches default snapshot 2`] = `
.c0 {
  box-sizing: border-box;
  width: large;
  height: large;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button size variant component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  width: small;
  height: small;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 14px;
  padding-left: 16px;
  padding-right: 16px;
  height: 40px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button size variant component sanity matches themed snapshot 2`] = `
.c0 {
  box-sizing: border-box;
  width: large;
  height: large;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button.Outline component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: 1px solid transparent;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

.c0 {
  color: var(--main-color);
  border-color: var(--main-color);
  background: transparent;
}

.c0:hover {
  background: var(--outline-hover-color);
}

.c0:active {
  background: var(--outline-active-color);
}

.c0:disabled {
  background: transparent;
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button.Outline component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: 1px solid transparent;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

.c0 {
  color: var(--main-color);
  border-color: var(--main-color);
  background: transparent;
}

.c0:hover {
  background: var(--outline-hover-color);
}

.c0:active {
  background: var(--outline-active-color);
}

.c0:disabled {
  background: transparent;
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button.Text component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  padding-left: 8px;
  padding-right: 8px;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--main-color);
  border: none;
  background: none;
  box-shadow: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  background: none;
  box-shadow: none;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0::before {
  display: none;
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Button.Text component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  padding-left: 8px;
  padding-right: 8px;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--main-color);
  border: none;
  background: none;
  box-shadow: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  background: none;
  box-shadow: none;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0::before {
  display: none;
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  />
</button>
`;

exports[`Link Button Outline component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: 1px solid transparent;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

.c0 {
  color: var(--main-color);
  border-color: var(--main-color);
  background: transparent;
}

.c0:hover {
  background: var(--outline-hover-color);
}

.c0:active {
  background: var(--outline-active-color);
}

.c0:disabled {
  background: transparent;
}

<a
  class="c0"
  font-size="inherit"
  font-weight="bold"
  href="#!"
  target="_blank"
  title="Learn more"
>
  <span
    class="button-text"
  >
    Learn More
  </span>
</a>
`;

exports[`Link Button component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<a
  class="c0"
  font-size="inherit"
  font-weight="bold"
  href="#!"
  target="_blank"
  title="Learn more"
>
  <span
    class="button-text"
  >
    Learn More
  </span>
</a>
`;

exports[`Loading Button component sanity matches default snapshot 1`] = `
.c1 {
  box-sizing: border-box;
  color: #ffffff;
  background-color: transparent;
  width: 1rem;
  height: 1rem;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

.c2 {
  display: block;
  position: relative;
  overflow: hidden;
}

.c2 > svg {
  fill: currentColor;
  height: 100%;
  width: 100%;
  display: block;
  -webkit-animation: bAyNlV 1000ms linear infinite;
  animation: bAyNlV 1000ms linear infinite;
  -webkit-animation-timing-function: cubic-bezier(0.445,0.05,0.55,0.95);
  animation-timing-function: cubic-bezier(0.445,0.05,0.55,0.95);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <span
    class="button-text"
  >
    <div
      class="c1 c2"
      color="white"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 20.5714C16.7339 20.5714 20.5714 16.7339 20.5714 12C20.5714 7.26613 16.7339 3.42857 12 3.42857C7.26613 3.42857 3.42857 7.26613 3.42857 12C3.42857 16.7339 7.26613 20.5714 12 20.5714ZM12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24Z"
          fill="currentColor"
          fill-rule="evenodd"
          opacity="0.25"
        />
        <mask
          height="24"
          id="mask0"
          mask-type="alpha"
          maskUnits="userSpaceOnUse"
          width="24"
          x="0"
          y="0"
        >
          <path
            clip-rule="evenodd"
            d="M12 20.5714C16.7339 20.5714 20.5714 16.7339 20.5714 12C20.5714 7.26613 16.7339 3.42857 12 3.42857C7.26613 3.42857 3.42857 7.26613 3.42857 12C3.42857 16.7339 7.26613 20.5714 12 20.5714ZM12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0)"
        >
          <path
            d="M12 24V15.8824V12H24V24H12Z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
  </span>
</button>
`;

exports[`Loading Button component sanity matches default snapshot 2`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: inherit;
  font-weight: 600;
  line-height: 1;
  border: none;
  width: medium;
  height: medium;
  border-radius: 4px;
  box-shadow: 0;
  --main-color: #1A5AFE;
  --contrast-color: #ffffff;
  --hover-color: #0041E5;
  --active-color: #001146;
  --disabled-color: #8CBCFF;
  --outline-hover-color: #E5F1FF;
  --outline-active-color: #B2D2FF;
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  height: 48px;
}

.c0 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c0 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > svg,
.c0 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 > div > svg {
  display: block;
}

.c0 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c0 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c0 > div:first-child:last-child > svg {
  margin: 0;
}

.c0 {
  color: var(--contrast-color);
  background: var(--main-color);
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background: var(--hover-color);
}

.c0:active {
  background: var(--active-color);
}

.c0::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.c0:disabled {
  background: var(--disabled-color);
}

<button
  class="c0"
  font-size="inherit"
  font-weight="bold"
>
  <div
    class="c1"
    display="inline-flex"
  >
    <svg
      class="c2"
      color="inherit"
      fill="currentcolor"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </div>
</button>
`;
